[FEATURE] : Add auto resize and auto crop on images for image and file objects
[FEATURE] : Add email notification to user/group field of objects (like author for example)
[FEATURE] : Add atm-page and atm-website tags
[FEATURE] : Add PHPExcel library (working on excel files) : http://phpexcel.codeplex.com
[FEATURE] : Add Languages management

V4.0.2 (25/05/2010)
[BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
[BUG] : Remove ghost groups on templates
[BUG] : Templates do a better check on usage
[BUG] : In administration, handle page links to documents or images which open directly in the current page : force open the link in a new window.
[REFACTOR] : Add draft thumbnail on page status icons
[REFACTOR] : Update phpMyAdmin to version 3.3.1
[REFACTOR] : Update ExtJS to version 3.2.0
[REFACTOR] : Add pages redirection infos in pages tree
[REFACTOR] : Interface for multi poly objects association is completely refactored
[REFACTOR] : Change parameters labels and position on image field
[FEATURE] : Add tabs menu on all tabs panels
[FEATURE] : Add labels and ids variables to object categories when using multi categories
[FEATURE] : Add cache management to all polymod blocks, plugins and rss. Add parameter cache on block tag and tag atm-cache-reference to handle this.
[FEATURE] : Add tags atm-admin, atm-noadmin, atm-edit, atm-noedit
[FEATURE] : Add shorthand for atm-linx type direct with this syntax : <atm-linx type="direct" node="pageID"> ... html code ... </atm-linx>
[FEATURE] : Add polymod tags atm-else, atm-start-tag, atm-end-tag

V4.0.1 (19/03/10)
[BUG] : Corrected bugs : 399, 401, 286, 265, 268, 283, 284, 302, 282, 280, 296, 304 (see http://www.automne.ws/bug/)
[BUG] : In the cms_forms module with IE (form duplication)
[BUG] : Multiples validations launches multiple concurrent ajax requests
[REFACTOR] : update Automne copyright dates
[REFACTOR] : add a background image on lorem ipsum text to help non latin natives to identify it