@@ -29,6 +29,7 @@ V4.1.0 (in progress)
 [FEATURE] : Add atm-page and atm-website tags
 [FEATURE] : Add PHPExcel library (working on excel files) : http://phpexcel.codeplex.com
 [FEATURE] : Add Languages management
+[FEATURE] : Add options for keyword search on polymod modules
 
 V4.0.2 (25/05/2010)
 [BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
